--- a/src/BackendFirstStage.Api/BackendFirstStage.Api.csproj
+++ b/src/BackendFirstStage.Api/BackendFirstStage.Api.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BackendFirstStage.Applications\BackendFirstStage.Applications.csproj" />
+    <ProjectReference Include="..\BackendFirstStage.Infrastructures\BackendFirstStage.Infrastructures.csproj" />
+  </ItemGroup>
+
 </Project>
