--- a/src/BackendFirstStage.Api/Properties/launchSettings.json
+++ b/src/BackendFirstStage.Api/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5114",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MsSqlServer": "Server=localhost;Database=BackendFirstStageDb;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5114"
     },
     "https": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7153;http://localhost:5114",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MsSqlServer": "Server=localhost;Database=BackendFirstStageDb;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7153;http://localhost:5114"
     }
-  }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
