--- a/src/BackendFirstStage.Applications/BackendFirstStage.Applications.csproj
+++ b/src/BackendFirstStage.Applications/BackendFirstStage.Applications.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BackendFirstStage.Domain\BackendFirstStage.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
