--- a/src/BackendFirstStage.Infrastructures/BackendFirstStage.Infrastructures.csproj
+++ b/src/BackendFirstStage.Infrastructures/BackendFirstStage.Infrastructures.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BackendFirstStage.Domain\BackendFirstStage.Domain.csproj" />
+    <ProjectReference Include="..\BackendFirstStage.Applications\BackendFirstStage.Applications.csproj" />
+  </ItemGroup>
+
 </Project>
